samples/_failures_safe/1761564294_dbd6cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_066cab4a.c:159: error: expected ‘;’, ‘,’ or ‘)’ at end of input
